# my_fast_api

./: index.html  main.py  models.py  pyproject.toml  task_3_1.py
